# browserdemo

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  index.html  package-lock.json  package.json  redeploy.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
agent/: .bedrock_agentcore.yaml  pyproject.toml  requirements.txt
agent/src/: __init__.py  main.py
public/: dcv-viewer.html
server/: index.ts
server/lib/: agentcore-browser.ts  browser-agent.ts
server/routes/: demos.ts  profiles.ts  sessions.ts
src/: App.tsx  index.css
src/components/: ActivityLog.tsx  CodeSnippet.tsx  Layout.tsx  LiveViewPanel.tsx  PromptInput.tsx
src/lib/: api.ts  demo-configs.ts
src/pages/: DemoPage.tsx  ProfilesPage.tsx  SessionsPage.tsx
