[project]
name = "agentcore-browser-demo-agent"
version = "1.0.0"
description = "Strands agent with AgentCore Browser tool for the demo platform"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.1.0",
    "playwright>=1.40.0",
    "nest-asyncio>=1.6.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
